fix: 404 event registration
